<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/firstInput"
        android:layout_width="351dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/secondInput"
        android:layout_width="351dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstInput" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstInput">


        <RadioButton
            android:id="@+id/add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstInput" />

        <RadioButton
            android:id="@+id/sub"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/sub" />

        <RadioButton
            android:id="@+id/multi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/multi"
            app:layout_constraintStart_toEndOf="@+id/sub"
            app:layout_constraintTop_toBottomOf="@+id/firstInput" />

        <RadioButton
            android:id="@+id/div"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/div" />

    </RadioGroup>

    <Button
        android:id="@+id/calc"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:text="@string/calc"
        android:textColor="@color/black"
        app:cornerRadius="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:text="@string/save"
        android:textColor="@color/black"
        app:cornerRadius="2dp"
        app:layout_constraintStart_toEndOf="@+id/calc"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:text="@string/load"
        android:textColor="@color/black"
        app:cornerRadius="2dp"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

    <TextView
        android:id="@+id/output"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:backgroundTint="@color/blue"
        android:gravity="right"
        android:text="@string/zero"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save"
        tools:ignore="RtlHardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>